--- a/src/View_Controller/MainScreen.fxml
+++ b/src/View_Controller/MainScreen.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane layoutX="14.0" layoutY="24.0" prefHeight="380.0" prefWidth="760.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="790.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <GridPane layoutX="14.0" layoutY="14.0" prefHeight="390.0" prefWidth="760.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -71,10 +71,10 @@
             </HBox>
             <TableView fx:id="partsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
                 <columns>
-                    <TableColumn fx:id="partIDCol" prefWidth="50.0" text="ID" />
-                    <TableColumn fx:id="partNameCol" prefWidth="160.0" text="Name" />
-                    <TableColumn fx:id="partLevelCol" prefWidth="89.0" text="Level" />
-                    <TableColumn fx:id="partPriceCol" text="Cost" />
+                    <TableColumn fx:id="partsTableIDCol" prefWidth="50.0" text="ID" />
+                    <TableColumn fx:id="partsTableNameCol" prefWidth="160.0" text="Name" />
+                    <TableColumn fx:id="partsTableInvCol" prefWidth="90.0" text="Level" />
+                    <TableColumn fx:id="partsTablePriceCol" text="Cost" />
                 </columns>
             </TableView>
           <padding>
@@ -100,7 +100,7 @@
                     <Insets left="10.0" />
                 </GridPane.margin>
             </Label>
-            <Button fx:id="searchProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+            <Button fx:id="searchProductBtn" mnemonicParsing="false" onAction="#searchProductBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
             <TextField fx:id="productSearchTextField" promptText="Product Name" GridPane.columnIndex="2">
                 <GridPane.margin>
                     <Insets left="5.0" right="10.0" />
@@ -111,10 +111,10 @@
             </TextField>
             <TableView fx:id="productsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
                 <columns>
-                    <TableColumn fx:id="productIDCol" prefWidth="50.0" text="ID" />
-                    <TableColumn fx:id="productNameCol" prefWidth="168.0" text="Name" />
-                    <TableColumn fx:id="productLevelCol" prefWidth="81.0" text="Level" />
-                    <TableColumn fx:id="productPriceCol" text="Cost" />
+                    <TableColumn fx:id="productsTableIDCol" prefWidth="50.0" text="ID" />
+                    <TableColumn fx:id="productsTableNameCol" prefWidth="160.0" text="Name" />
+                    <TableColumn fx:id="productsTableInvCol" prefWidth="90.0" text="Level" />
+                    <TableColumn fx:id="productsTablePriceCol" text="Cost" />
                 </columns>
             </TableView>
             <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
