--- a/src/View_Controller/UpdateProduct.fxml
+++ b/src/View_Controller/UpdateProduct.fxml
@@ -11,7 +11,7 @@
         </font>
     </Label>
     <Button fx:id="partSearchBtn" layoutX="375.0" layoutY="14.0" mnemonicParsing="false" onAction="#partSearchBtnAction" prefWidth="60.0" text="Search" />
-    <TextField fx:id="partSearchTextField" layoutX="437.0" layoutY="14.0" promptText="Search Part">
+    <TextField fx:id="partSearchTextField" layoutX="437.0" layoutY="14.0" promptText="Part Name">
         <font>
             <Font name="System Italic" size="12.0" />
         </font></TextField>
